[gd_scene load_steps=5 format=3 uid="uid://bmfoxlq1386qh"]

[ext_resource type="Texture2D" uid="uid://be2jtwpkg1xi1" path="res://art/arm.png" id="1_3x3yb"]
[ext_resource type="Script" path="res://enemies/arm.gd" id="1_80a7n"]
[ext_resource type="AudioStream" uid="uid://bxuiw5ylm3eus" path="res://audio/mechanical1.wav" id="3_ulprg"]
[ext_resource type="AudioStream" uid="uid://d1tdbnullcp8p" path="res://audio/shot.wav" id="4_lc0uf"]

[node name="Arm" type="CharacterBody2D"]
script = ExtResource("1_80a7n")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(11, 11)
texture = ExtResource("1_3x3yb")

[node name="TimeBetweenBulletsTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="SpawnPoints" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SpawnPoint1" type="Node2D" parent="SpawnPoints"]
position = Vector2(-220, -277)
rotation = 4.71239

[node name="SpawnPoint2" type="Node2D" parent="SpawnPoints"]
position = Vector2(-132, -277)
rotation = 4.71239

[node name="SpawnPoint3" type="Node2D" parent="SpawnPoints"]
position = Vector2(-44, -277)
rotation = 4.71239

[node name="SpawnPoint4" type="Node2D" parent="SpawnPoints"]
position = Vector2(44, -277)
rotation = 4.71239

[node name="SpawnPoint5" type="Node2D" parent="SpawnPoints"]
position = Vector2(132, -277)
rotation = 4.71239

[node name="SpawnPoint6" type="Node2D" parent="SpawnPoints"]
position = Vector2(220, -277)
rotation = 4.71239

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ulprg")
volume_db = 5.0
autoplay = true
max_distance = 1000.0

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_lc0uf")
max_distance = 1000.0

[connection signal="timeout" from="TimeBetweenBulletsTimer" to="." method="_on_time_between_bullets_timer_timeout"]
